2007-09-14  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (install_from_file_flow): Added extra logic to
	convert the filename received to a valid GnomeVFS uri (N66407).

2007-09-13  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operations.cc (result_code_to_message): Changed
	implementation and list of parameters to also receive package info
	struct and to take it into account to include its name in the
	returned string (N68825) (N68832).
	(ip_install_cur_reply): Changed the way of calling to
	result_code_to_message (N68825) (N68832).
	(ip_install_reply): Changed the way of calling to
	result_code_to_message (N68825) (N68832).
	(up_remove): Added the name of the package to the string shown
	when uninstalling it is not possible (N68850).
	(installable_status_to_message): Fixed some mistakes setting the
	final localized strings with the name of the packages inside of
	them (N68879) (N68886) (N68898).
	(ip_install_with_info): Set the logical id for the "Not enough
	memory" message (N68911).

	* src/util.cc (entertainment_insensitive_press): Replaced
	hardcoded string with the right l10n logical id (N68844).

	* src/main.cc (rpc_with_network): Removed dialog shown when
	there's no available network connection. Just stop current
	operation silently in that case (N68894).

2007-09-12  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (static gboolean package_list_ready): New global
	variable to take care of the status for the first package list
	load in main function (N56637).
	(get_package_list_reply): Update the value of the new global
	variable when needed (N56637).
	(check_catalogues): Don't get catalogues if the package list is
	not ready yet (N56637).
	(rpc_show_error_report): Fixed localization issue for the continue
	button and the dialog main text (N68736).

	* src/operations.cc (ip_check_cert_reply): Fixed localization
	issue for the continue button and the dialog main text (N68736).